--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,45 @@
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
   <link rel="stylesheet" type="text/css" href="{{ '/assets/css/style.css' | relative_url }}">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f4;
+    }
+    header {
+      background-color: #333;
+      color: #fff;
+      padding: 10px 0;
+      text-align: center;
+    }
+    nav ul {
+      list-style-type: none;
+      padding: 0;
+    }
+    nav ul li {
+      display: inline;
+      margin: 0 10px;
+    }
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      transition: color 0.3s;
+    }
+    nav ul li a:hover {
+      color: #ddd;
+    }
+    main {
+      padding: 20px;
+      opacity: 0;
+      transition: opacity 0.5s ease-in-out;
+    }
+    main.visible {
+      opacity: 1;
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -19,8 +58,21 @@
       </ul>
     </nav>
   </header>
-  <main>
+  <main id="content">
     {{ content }}
   </main>
+  <script>
+    $(document).ready(function() {
+      $('#content').addClass('visible');
+      $('nav ul li a').click(function(e) {
+        e.preventDefault();
+        var link = $(this).attr('href');
+        $('#content').removeClass('visible');
+        setTimeout(function() {
+          window.location.href = link;
+        }, 500);
+      });
+    });
+  </script>
 </body>
 </html>
