--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,17 +21,25 @@
     nav ul {
       list-style-type: none;
       padding: 0;
+      margin: 0;
+      display: flex;
+      justify-content: center;
+      background-color: #444;
     }
     nav ul li {
-      display: inline;
-      margin: 0 10px;
+      margin: 0 5px;
     }
     nav ul li a {
+      display: block;
+      padding: 10px 20px;
+      background-color: #555;
       color: #fff;
       text-decoration: none;
-      transition: color 0.3s;
+      border-radius: 5px;
+      transition: background-color 0.3s, color 0.3s;
     }
     nav ul li a:hover {
+      background-color: #666;
       color: #ddd;
     }
     main {
@@ -54,7 +62,7 @@
         <li><a href="{{ '/experience' | relative_url }}">Experience</a></li>
         <li><a href="{{ '/projects' | relative_url }}">Projects</a></li>
         <li><a href="{{ '/awards' | relative_url }}">Awards</a></li>
-        <li><a href="{{ '/skills' | relative_url }}">Skills</a></li>
+        <li><a href="{{ '/skills' | relative_url }}">Skills & Interests</a></li>
       </ul>
     </nav>
   </header>
