--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,9 @@
       margin: 0;
       padding: 0;
       background-color: #f4f4f4;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
     }
     header {
       background-color: #333;
@@ -18,13 +21,16 @@
       padding: 10px 0;
       text-align: center;
     }
+    nav {
+      margin-top: auto;
+      background-color: #444;
+    }
     nav ul {
       list-style-type: none;
       padding: 0;
       margin: 0;
       display: flex;
       justify-content: center;
-      background-color: #444;
     }
     nav ul li {
       margin: 0 5px;
@@ -32,18 +38,19 @@
     nav ul li a {
       display: block;
       padding: 10px 20px;
-      background-color: #555;
+      background-color: #003366; /* Dark blue background */
       color: #fff;
       text-decoration: none;
       border-radius: 5px;
       transition: background-color 0.3s, color 0.3s;
     }
     nav ul li a:hover {
-      background-color: #666;
+      background-color: #0059b3; /* Slightly lighter blue on hover */
       color: #ddd;
     }
     main {
       padding: 20px;
+      flex: 1;
       opacity: 0;
       transition: opacity 0.5s ease-in-out;
     }
@@ -55,20 +62,20 @@
 <body>
   <header>
     <h1>{{ site.title }}</h1>
-    <nav>
-      <ul>
-        <li><a href="{{ '/' | relative_url }}">Home</a></li>
-        <li><a href="{{ '/education' | relative_url }}">Education</a></li>
-        <li><a href="{{ '/experience' | relative_url }}">Experience</a></li>
-        <li><a href="{{ '/projects' | relative_url }}">Projects</a></li>
-        <li><a href="{{ '/awards' | relative_url }}">Awards</a></li>
-        <li><a href="{{ '/skills' | relative_url }}">Skills & Interests</a></li>
-      </ul>
-    </nav>
   </header>
   <main id="content">
     {{ content }}
   </main>
+  <nav>
+    <ul>
+      <li><a href="{{ '/' | relative_url }}">Home</a></li>
+      <li><a href="{{ '/education' | relative_url }}">Education</a></li>
+      <li><a href="{{ '/experience' | relative_url }}">Experience</a></li>
+      <li><a href="{{ '/projects' | relative_url }}">Projects</a></li>
+      <li><a href="{{ '/awards' | relative_url }}">Awards</a></li>
+      <li><a href="{{ '/skills' | relative_url }}">Skills & Interests</a></li>
+    </ul>
+  </nav>
   <script>
     $(document).ready(function() {
       $('#content').addClass('visible');
@@ -80,6 +87,10 @@
           window.location.href = link;
         }, 500);
       });
+    });
+
+    $(window).on('pageshow', function() {
+      $('#content').addClass('visible');
     });
   </script>
 </body>
