--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,38 @@ body {
   padding: 0;
   background-color: #f4f4f4;
 }
+#content h1 {
+  text-align: center;
+  color: #003366;
+}
+
+#content ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+#content ul li {
+  margin-bottom: 10px;
+}
+
+#content ul li::before {
+  content: "•";
+  color: #003366;
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
+
+#content ul ul {
+  list-style-type: circle;
+  margin-left: 20px;
+}
+
+#content ul ul li {
+  margin-bottom: 5px;
+}
 
 header {
   background-color: #333
+  
