--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,6 +64,13 @@
     main.visible {
       opacity: 1;
     }
+    img {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
   </style>
 </head>
 <body>
@@ -80,7 +87,7 @@
       <li><a href="{{ '/experience' | relative_url }}">Experience</a></li>
       <li><a href="{{ '/projects' | relative_url }}">Projects</a></li>
       <li><a href="{{ '/awards' | relative_url }}">Awards</a></li>
-      <li><a href="{{ '/skills' | relative_url }}">Skills & Interests</a></li>
+      <li><a href="{{ '/skills-interests' | relative_url }}">Skills & Interests</a></li>
     </ul>
   </nav>
   <script>
