--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
       <li><a href="{{ '/experience' | relative_url }}">Experience</a></li>
       <li><a href="{{ '/projects' | relative_url }}">Projects</a></li>
       <li><a href="{{ '/awards' | relative_url }}">Awards</a></li>
-      <li><a href="{{ '/skills-interests' | relative_url }}">Skills & Interests</a></li>
+      <li><a href="{{ '/skills' | relative_url }}">Skills & Interests</a></li>
     </ul>
   </nav>
   <script>
