--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,8 +158,9 @@ main a:hover {
 .animated-text span {
   display: inline-block;
   opacity: 0;
+  white-space: pre;
 }
 
 .animated-text span.show {
-  animation: fall 0.5s forwards;
+  animation: fall 0.3s forwards; /* Make the animation faster */
 }
