--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,12 +64,6 @@ main {
   flex: 1;
   margin-top: 60px; /* Adjust based on your header height */
   margin-bottom: 100px; /* Space for the fixed nav at the bottom */
-  opacity: 0;
-  transition: opacity 0.5s ease-in-out;
-}
-
-main.visible {
-  opacity: 1;
 }
 
 img {
@@ -85,16 +79,6 @@ img {
   height: auto;
   border-radius: 50%; /* Make it circular */
   overflow: hidden;
-  animation: zoomIn 2s ease-in-out infinite alternate;
-}
-
-@keyframes zoomIn {
-  0% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(1.1);
-  }
 }
 
 .education-entry {
@@ -110,7 +94,7 @@ img {
 }
 
 .education-logo img {
-  max-width: 100px; /* Adjust the size of the logos */
+  max-width: 150px; /* Adjust the size of the logos */
   height: auto;
 }
 
@@ -144,23 +128,38 @@ main a:hover {
 }
 
 /* Animation styles */
-@keyframes fall {
+@keyframes dropBounce {
   0% {
     transform: translateY(-100px);
     opacity: 0;
   }
+  50% {
+    transform: translateY(10px);
+    opacity: 1;
+  }
   100% {
     transform: translateY(0);
-    opacity: 1;
   }
 }
 
-.animated-text span {
-  display: inline-block;
+.bounce-in {
+  animation: dropBounce 0.6s ease;
   opacity: 0;
-  white-space: pre; /* Preserve white spaces */
+  animation-fill-mode: forwards;
 }
 
-.animated-text span.show {
-  animation: fall 0.1s forwards; /* Make the animation faster */
+.bounce-in:nth-child(2) {
+  animation-delay: 0.2s;
+}
+
+.bounce-in:nth-child(3) {
+  animation-delay: 0.4s;
+}
+
+.bounce-in:nth-child(4) {
+  animation-delay: 0.6s;
+}
+
+.bounce-in:nth-child(5) {
+  animation-delay: 0.8s;
 }
