--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,7 @@
       <li><a href="{{ '/projects' | relative_url }}">Projects</a></li>
       <li><a href="{{ '/awards' | relative_url }}">Awards</a></li>
       <li><a href="{{ '/skills-interests' | relative_url }}">Skills & Interests</a></li>
+      <li><a href="{{ '/music-repertoire' | relative_url }}">Music Repertoire</a></li>
     </ul>
   </nav>
   <script>
