--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
       <li><a href="{{ '/awards' | relative_url }}">Awards</a></li>
       <li><a href="{{ '/skills-interests' | relative_url }}">Skills & Interests</a></li>
       <li><a href="{{ '/music-repertoire' | relative_url }}">Music Repertoire</a></li>
+      <li><a href="{{ '/classes-i-have-taken' | relative_url }}">Classes I Have Taken</a></li>
     </ul>
   </nav>
   <script>
