--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,8 +93,12 @@ img {
   margin-right: 20px;
 }
 
+.education-logo {
+  flex-shrink: 0;
+}
+
 .education-logo img {
-  max-width: 150px; /* Adjust the size of the logos */
+  max-width: 100px; /* Adjust the size of the logos */
   height: auto;
 }
 
