--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,6 +157,6 @@ main a:hover {
 .stars {
   display: inline-block;
   font-size: 16px; /* Adjust size as needed */
-  color: yellow;
+  color: #FFD700;
   text-shadow: 1px 1px 1px #000;
 }
