--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
   </header>
   <main id="content">
     {{ content }}
+    <img src="/assets/images/picture.png" alt="Profile Picture" class="profile-pic">
   </main>
   <nav>
     <ul>
