--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
     <!-- Ensure only one profile picture tag -->
     {% if page.title == "Home" %}
     <img src="/assets/images/gportfolio_profile_picture.png" alt="Profile Picture" class="profile-pic">
+    <div id="math-symbols-container"></div>
     {% endif %}
   </main>
   <nav>
@@ -29,6 +30,7 @@
       <li><a href="{{ '/skills-interests' | relative_url }}"><span>Skills & Interests</span></a></li>
     </ul>
   </nav>
+  <script src="{{ '/assets/js/symbols.js' | relative_url }}"></script>
   <script>
     $(document).ready(function() {
       $('#content').addClass('visible');
