--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     {{ content }}
     <!-- Ensure only one profile picture tag -->
     {% if page.title == "Home" %}
-    <img src="/assets/images/gportfolio_profile_picture.png" alt="Profile Picture" class="profile-pic">
+    <img src="/assets/images/picture.png" alt="Profile Picture" class="profile-pic">
     <div id="math-symbols-container"></div>
     {% endif %}
   </main>
