--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,6 +20,9 @@ header {
 
 header h1 {
   margin: 0;
+  color: #000; /* Black color for Eugenio Macias title */
+  font-size: 3em; /* Make the header bigger */
+  font-weight: bold; /* Make the header bolder */
 }
 
 nav {
