--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
   <link rel="stylesheet" type="text/css" href="{{ '/assets/css/style.css' | relative_url }}">
+  <link rel="stylesheet" href="https://fonts.cdnfonts.com/css/cascadia-code">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
@@ -12,13 +13,12 @@
   </header>
   <main id="content">
     {{ content }}
-    <!-- Ensure only one profile picture tag -->
     {% if page.title == "Home" %}
-    <img src="/assets/images/picture.png" alt="Profile Picture" class="profile-pic">
+    <img src="/assets/images/gportfolio_profile_picture.png" alt="Profile Picture" class="profile-pic">
     <div id="math-symbols-container"></div>
     {% endif %}
   </main>
-  <nav>
+  <footer>
     <ul>
       <li><a href="{{ '/' | relative_url }}"><span>Home</span></a></li>
       <li><a href="{{ '/education' | relative_url }}"><span>Education</span></a></li>
@@ -29,7 +29,7 @@
       <li><a href="{{ '/music-repertoire' | relative_url }}"><span>Music Repertoire</span></a></li>
       <li><a href="{{ '/skills-interests' | relative_url }}"><span>Skills & Interests</span></a></li>
     </ul>
-  </nav>
+  </footer>
   <script src="{{ '/assets/js/symbols.js' | relative_url }}"></script>
   <script>
     $(document).ready(function() {
